# FERN

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHECKS.md  FERN-protocol-spec.md  README.md  TESTING_TOOLS.md  TODO.md  architecture.md  fern-wipe.sh  healing-plan.md  implementation-notes.md  protocol-app-boundary-blueprint.md  pyproject.toml  python-architecture.md  spec.md  sync-flowchart.md  sync-process  sync-process.md  timestamp-proposal.md  trusted-heal-plan.md
bracken/: index.html  package-lock.json  package.json
bracken/src/: App.tsx  vite-env.d.ts
bracken/src/components/: AddGroupModal.tsx  Avatar.tsx  Composer.tsx  DagViewer.tsx  Drawers.tsx  FernLogo.tsx  GroupInfoModal.tsx  IdentitySetup.tsx  InvitePreview.tsx  JoinModal.tsx  MessageList.tsx  (+3 more)
cli/: config.py  dag_viewer.py  main.py  output.py  relay_main.py  sync.py
cli/commands/: dag.py  group.py  init.py  post.py  read.py  relay.py  verify.py  watch.py  whoami.py
deploy/: .env.example  README.md
deploy/bracken/: Dockerfile  compose.yml  nginx-bracken.conf
deploy/relay/: Dockerfile  compose.yml  relay-entrypoint.sh  trust-config.example.json
examples/: minimal_client.py  minimal_relay.py
fern/: chat.py  client.py  config.py  crypto.py  dag.py  debug.py  events.py  inspect.py  relay.py  server.py  storage.py  sync.py  test.py
fern/static/: chat.html  index.html
qt_chat/: __init__.py  app.py  controller.py  dialogs.py  styles.py  widgets.py  worker.py
src/fern/: errors.py
tests/: conftest.py
tests/integration/: test_censorship_detection.py  test_event_roundtrip.py  test_fake_relay.py  test_relay_healing_actions.py  test_sqlite_store_threading.py  test_sync_diff.py  test_trusted_heal.py
(+83 files in other folders)
