[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["fern*", "qt_chat*"]

[tool.setuptools.package-data]
fern = ["static/**/*"]

[project]
name = "fern"
version = "0.1.0"
description = "FERN - Fault-tolerant Event Relay Network - decentralised group messaging protocol"
requires-python = ">=3.10"
dependencies = [
    "cryptography>=42.0",
    "websockets>=12.0",
    "click>=8.0",
    "aiohttp>=3.9",
    "PyQt5>=5.15",
]

[project.scripts]
fern = "fern.client:cli"
fern-chat = "qt_chat:main"
fern-web = "fern.inspect:main"
fern-inspect = "fern.inspect:main"
fern-server = "fern.server:main"
fern-debug = "fern.debug:cli"
fern-test = "fern.test:test_cli"
