[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fern-protocol"
version = "0.1.0"
description = "FERN — Fault-tolerant Event Relay Network"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=42.0",
    "websockets>=12.0",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "hypothesis>=6.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "build>=1.0",
]

[project.scripts]
fern = "cli.main:main"
fern-relay = "cli.relay_main:main"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["fern*", "cli*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
strict = true
files = ["src", "cli"]
